# Changes in version 4.0.0

Starting with version 4.0.0, typing_extensions uses Semantic Versioning.
See the README for more information.