@@ -2,3 +2,5 @@
 
 Starting with version 4.0.0, typing_extensions uses Semantic Versioning.
 See the README for more information.
+
+- Add runtime support for PEP 673 and `typing_extensions.Self`.
